--- a/coc-settings.json
+++ b/coc-settings.json
@@ -17,7 +17,8 @@
     "diagnostic.infoSign": "¶",
     "diagnostic.checkCurrentLine": true,
     "diagnostic.virtualText": true,
-	"diagnostic.virtualTextCurrentLineOnly": false,
+    "diagnostic.virtualTextCurrentLineOnly": false,
+    "diagnostic.hintSign": "",
 
     "suggest.completionItemKindLabels": {
         "variable": "\uf71b",
